<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorDarkGrey">

    <TextView
        android:id="@+id/txt_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/create_your_profile"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/card_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:elevation="@dimen/elevation"
        app:cardBackgroundColor="@color/colorGrey"
        app:cardCornerRadius="@dimen/corner_radius"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="8dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/img_profile"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_marginTop="18dp"
                android:src="@drawable/ic_profile"
                app:civ_border_color="@color/colorAccent"
                app:civ_border_width="3dp" />

            <LinearLayout
                android:id="@+id/ll0"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="18dp"
                android:layout_marginEnd="8dp"
                android:padding="8dp"
                android:background="@drawable/text_field_background"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_marginStart="10dp"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/ic_person"
                    app:tint="@color/white" />

                <EditText
                    android:id="@+id/edit_text_person"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="14dp"
                    android:background="@null"
                    android:hint="@string/enter_username"
                    android:inputType="textPersonName"
                    android:maxLength="10"
                    android:textColor="@color/white"
                    android:textColorHint="@color/colorHint"
                    android:textSize="16sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/text_field_background"
                android:gravity="center_vertical"
                android:padding="8dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_marginStart="10dp"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/ic_phone"
                    app:tint="@color/white" />

                <EditText
                    android:id="@+id/edit_text_phone"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="14dp"
                    android:background="@null"
                    android:hint="@string/_9599xxxxxx"
                    android:inputType="phone"
                    android:maxLength="10"
                    android:textColor="@color/white"
                    android:textColorHint="@color/colorHint"
                    android:textSize="16sp" />

            </LinearLayout>

            <Button
                android:id="@+id/btn_otp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="18dp"
                android:backgroundTint="@color/colorAccent"
                android:padding="8dp"
                android:text="@string/next"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold"
                app:cornerRadius="8dp" />


        </LinearLayout>

    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>